@@ -1,7 +1,10 @@
 Changelog
 
-$Id: Changes,v 1.77 2011-03-25 12:14:41 oops Exp $
+$Id: Changes,v 1.78 2011-03-25 16:26:26 oops Exp $
 
+* Sat, Mar 26 2011
+	- changed function declare of str2double api
+	
 * Fri, Mar 25 2011
 	- add join() api
 	- fixed wrong realpath_r() operation
